--- a/Notification/index.html
+++ b/Notification/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Send Email</h1>
-    <form method="POST" action="/send-email">
+    <form method="POST" action="/notification">
       <label for="to">To:</label>
       <input type="email" id="to" name="to" required><br>
 
